--- a/forget-password.html
+++ b/forget-password.html
@@ -34,7 +34,8 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- All Css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   
 
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css">
 
@@ -92,99 +93,8 @@
     <!-- Customized Javascript File -->
     <script src="assets/js/svg.js"></script>
     <script src="assets/js/custom.js"></script>
-    <script>
-document.addEventListener("DOMContentLoaded", function () {
-    const form = document.querySelector("form");
-    const emailInput = document.getElementById("getMail");
-    const submitBtn = document.querySelector(".btn-activity-confirm");
-
-    form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const email = emailInput.value.trim();
-
-        if (!email || !email.includes("@")) {
-            alert("يرجى إدخال بريد إلكتروني صالح");
-            return;
-        }
-
-        submitBtn.disabled = true;
-        submitBtn.textContent = "Sending...";
-
-        fetch("https://jobizaa.com/api/admin/password/reset-request", {
-            method: "POST",
-            headers: {
-                "Accept": "application/json",
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ email: email })
-        })
-        .then(async res => {
-            const data = await res.json();
-            if (!res.ok) throw new Error(data.message || "فشل في إرسال الرمز");
-            return data;
-        })
-       .then(() => {
-    localStorage.setItem("emailToVerify", email);
-    alert("تم إرسال الكود إلى بريدك الإلكتروني.");
-    window.location.href = "newpass.html"; // ← تم التوجيه إلى الصفحة المطلوبة
-})
-
-        .catch(error => {
-            alert(error.message || "حدث خطأ غير متوقع");
-        })
-        .finally(() => {
-            submitBtn.disabled = false;
-            submitBtn.textContent = "Signup";
-        });
-    });
-});
-</script>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-    const form = document.getElementById("resetRequestForm");
-    const emailInput = document.getElementById("getMail");
-    const submitBtn = document.querySelector(".btn-activity-confirm");
-
-    form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        const email = emailInput.value.trim();
-
-        if (!email || !email.includes("@")) {
-            alert("يرجى إدخال بريد إلكتروني صالح.");
-            return;
-        }
-
-        submitBtn.disabled = true;
-        submitBtn.textContent = "Sending...";
-
-        fetch("https://jobizaa.com/api/admin/password/reset-request", {
-            method: "POST",
-            headers: {
-                "Accept": "application/json",
-                "Content-Type": "application/json"
-            },
-            body: JSON.stringify({ email })
-        })
-        .then(async res => {
-            const data = await res.json();
-            if (!res.ok) throw new Error(data.message || "فشل في إرسال الكود.");
-            return data;
-        })
-        .then(() => {
-            localStorage.setItem("emailToVerify", email);
-            alert("تم إرسال الكود إلى بريدك الإلكتروني.");
-            window.location.href = "verify-code.html"; // ← غيري اسم الصفحة حسب صفحتك التالية
-        })
-        .catch(err => {
-            alert(err.message || "حدث خطأ، يرجى المحاولة لاحقًا.");
-        })
-        .finally(() => {
-            submitBtn.disabled = false;
-            submitBtn.textContent = "Signup";
-        });
-    });
-});
-</script>
+    <script src="js/forget.js"></script>
+   
 
 </body>
 
