Added Auth & Charts APIs & Authorized Modifed

--- a/cod.html
+++ b/cod.html
@@ -39,7 +39,6 @@
     <link type="text/css" rel="stylesheet" href="assets/css/styles.css">
    
 </head>
-
 <body>
     <!-- Spinner Loader Start -->
     <div class="loader">
@@ -172,7 +171,11 @@ document.addEventListener("DOMContentLoaded", function () {
     });
 });
 </script>
-
+<script src="js/login.js"></script>
+<script>
+         protectPage(['super-admin','admin']);
+    </script>
+<script src="js/auth.js"></script>
 </body>
 
 </html>
