--- a/forget-password.html
+++ b/forget-password.html
@@ -94,6 +94,11 @@
     <script src="assets/js/svg.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="js/forget.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/auth.js"></script>
+    <script>
+         protectPage(['super-admin','admin']);
+    </script>
    
 
 </body>
