--- a/signup.html
+++ b/signup.html
@@ -119,6 +119,11 @@
 
     <!-- Jquery Javascript File -->
     <script src="assets/js/jquery.min.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/auth.js"></script>
+    <script>
+         protectPage(['super-admin','admin']);
+    </script>
     <!-- Bootstrap Bundle Javascript File -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- Owl Carousel Javascript File -->
