--- a/login.html
+++ b/login.html
@@ -199,44 +199,6 @@
             <a href="signup.html" class="activity-go-link">Signup</a>
           </div>
 
-        <div class="container d-flex">
-            <div class="activity-card">
-                <div class="activity-logo-wrap">
-                    <a href="home.html" class="logo-img pb-0">
-                        <img src="assets/images/logo/logo.svg" alt="logo-images" />
-                    </a>
-                </div>
-                <div class="activity-card-heading">
-                    <h1 class="activity-card-header">Welcome Back</h1>
-                    <label class="activity-card-subtitle">Join us today and unlock a world of possibilities – your journey starts here!.</label>
-                </div>
-                <div class="activity-actions">
-                    <form id="loginForm" class="d-flex flex-column gap-4">
-                        <div class="form-group">
-                            <label for="userEmail"><i class="fas fa-envelope"></i></label>
-                            <input type="email" id="userEmail" class="input-one" placeholder="Email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="userPassword"><i class="fas fa-lock"></i></label>
-                            <input type="password" id="userPassword" class="input-one" placeholder="Password" required>
-                            <span class="password-toggle" id="togglePassword">
-                             <i class="fas fa-eye"></i>
-                            </span>
-                        </div>
-                        <div class="text-end">
-                         <a href="forget-password.html" class="activity-forget mb-0">Forget Password?</a>
-                        </div>
-                        <button type="submit" id="loginButton" class="btn-common btn-activity-confirm">Login</button>
-                        <div id="error-message-box" class="error-box"></div>
-                    </form>
-                </div>
-                <div class="activity-switch">
-                    <label class="activity-switch-title">Don't have an account?</label>
-                    <a href="signup.html" class="activity-go-link">Signup</a>
-                </div>
-            </div>
-
-        </div>
       </div>
     </section>
     <!-- Activity Page Section Ends Here-->
@@ -252,6 +214,11 @@
     <!-- Default Javascript File -->
     <script src="assets/js/svg.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/login.js"></script>
+    
+ 
+
 
 
     <script>
