--- a/newpass.html
+++ b/newpass.html
@@ -196,7 +196,8 @@
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- Default Javascript File -->
     <script src="assets/js/custom.js"></script>
-
+    <script src="js/auth.js"></script>
+    <script src="js/login.js"></script>
   <script src="./js/newpass.js"></script>
 
 </body>
