--- a/verify code.html
+++ b/verify code.html
@@ -117,6 +117,8 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/custom.js"></script>
+        <script src="js/login.js"></script>
+    <script src="js/auth.js"></script>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
