--- a/job.html
+++ b/job.html
@@ -264,12 +264,14 @@
                 <th>Applicants</th>
                 <th>Status</th>
                 <th>Actions</th>
+                <th>Details</th>
+
               </tr>
             </thead>
             <tbody id="jobTable"></tbody>
           </table>
         </div>
-
+ <div id="jobDetailsContainer"></div>
         <div class="card-container"></div>
 
         <div
