--- a/view.html
+++ b/view.html
@@ -143,10 +143,10 @@
                             <p>مصمم مواقع</p>
                         </div>
                         <ul>
-                            <li><i class="fas fa-user"></i> الحساب الشخصي</li>
-                            <li><i class="fas fa-cog"></i> الإعدادات</li>
-                            <li><i class="fas fa-question-circle"></i> المساعدة</li>
-                            <li><i class="fas fa-sign-out-alt"></i> تسجيل الخروج</li>
+                <li><a href="profile.html" class="fas fa-user"></a> Profile</li>
+                <li><a href="setting.html" class="fas fa-cog"></a> Setting</li>
+                <li><a href="app/chat.html" class="fas fa-question-circle"></a> Support</li>
+                <li><a href="#" class="fas fa-sign-out-alt" onclick="logout()"> LogOut</a></li>
                         </ul>
                     </div>
 
