--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
 
             <div class="dropdown-box">
               <div class="user-info">
-                <h3>Kevin Anderson</h3>
+                <h3>Sea</h3>
                 <p>مصمم مواقع</p>
               </div>
               <ul>
-                <li><i class="fas fa-user"></i> الحساب الشخصي</li>
-                <li><i class="fas fa-cog"></i> الإعدادات</li>
-                <li><i class="fas fa-question-circle"></i> المساعدة</li>
-                <li><i class="fas fa-sign-out-alt"></i> تسجيل الخروج</li>
+                <li><a href="profile.html" class="fas fa-user"> Profile</a></li>
+                <li><a href="setting.html" class="fas fa-cog"> Setting</a></li>
+                <li><a href="app/chat.html" class="fas fa-question-circle"> Support</a></li>
+                <li><a href="#" class="fas fa-sign-out-alt" onclick="logout()">LogOut</a></li>
               </ul>
             </div>
           </div>
