--- a/forget-password.html
+++ b/forget-password.html
@@ -61,7 +61,7 @@
                 <div class="activity-card-heading">
                     <h1 class="activity-card-header">Forgot Password</h1>
                     <label class="activity-card-subtitle">Enter your email address below and we'll get you
-                        back on track.</p>
+                        back on track. </label>
                 </div>
                 <div class="activity-actions activity-actions-forget">
                     <form>
