--- a/user.html
+++ b/user.html
@@ -199,7 +199,7 @@
     </a>
   </li>
 
-  <li data-id="jobs" class="admin-only">
+  <li data-id="jobs" class="user-only">
     <a href="job.html">
       <span class="icon"><i class="fa-solid fa-briefcase"></i></span>
       <span class="text">Jobs</span>
