Dynamic Profile Nav With API

--- a/profile.html
+++ b/profile.html
@@ -151,16 +151,16 @@
         <a href="./nofigation.html" class="view-all">View all</a>
     </div>
 </div>
-            <i class="fas fa-layer-group"></i>
-            <div class="user-profile" onclick="toggleDropdown()">
-                <img src="assets/images/avata.jpeg" alt="image profile">
-                <span>Hi, Hizrian</span>
+          <i class="fas fa-layer-group"></i>
+          <div class="user-profile" onclick="toggleDropdown()">
+            <img src="assets/images/avata.jpeg" alt="image profile" />
+            <span name="name">Hi, Hizrian</span>
 
-                <div class="dropdown-box">
-                    <div class="user-info">
-                        <h3>Kevin Anderson</h3>
-                        <p>مصمم مواقع</p>
-                    </div>
+            <div class="dropdown-box">
+              <div class="user-info">
+                <h3 name="name">Sea</h3>
+                <p name="location">مصمم مواقع</p>
+              </div>
                     <ul>
                 <li><a href="profile.html" class="fas fa-user"> Profile</a></li>
                 <li><a href="setting.html" class="fas fa-cog"> Setting</a></li>
