--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
           <i class="fas fa-layer-group"></i>
           <div class="user-profile" onclick="toggleDropdown()">
             <img src="assets/images/avata.jpeg" alt="image profile" />
-            <span>Hi, Hizrian</span>
+            <span name="name">Hi, Hizrian</span>
 
             <div class="dropdown-box">
               <div class="user-info">
-                <h3>Sea</h3>
-                <p>مصمم مواقع</p>
+                <h3 name="name">Sea</h3>
+                <p name="location">مصمم مواقع</p>
               </div>
               <ul>
                 <li><a href="profile.html" class="fas fa-user"> Profile</a></li>
