--- a/forget-password.html
+++ b/forget-password.html
@@ -55,7 +55,7 @@
             <div class="activity-card">
                 <div class="activity-logo-wrap">
                     <a href="home.html" class="logo-img pb-0">
-                        <img src="assets/images/logo/logo.svg" alt="logo-images" />
+                        <img src="./imag/logo.png" alt="logo-images" />
                     </a>
                 </div>
                 <div class="activity-card-heading">
