--- a/login.html
+++ b/login.html
@@ -147,7 +147,7 @@
         <div class="activity-card">
           <div class="activity-logo-wrap">
             <a href="home.html" class="logo-img pb-0">
-              <img src="assets/images/logo/logo.svg" alt="logo-images" />
+              <img src="./imag/logo.png" alt="logo-images" />
             </a>
           </div>
           <div class="activity-card-heading">
@@ -221,129 +221,7 @@
 
 
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const form = document.getElementById("loginForm");
-        const emailInput = document.getElementById("userEmail");
-        const passwordInput = document.getElementById("userPassword");
-        const errorBox = document.getElementById("error-message-box");
-        const loginButton = document.getElementById("loginButton");
-        const togglePassword = document.getElementById("togglePassword");
-
-        // تعبئة البريد المسجل سابقاً إن وجد
-        const savedEmail = localStorage.getItem("emailToVerify");
-        if (savedEmail) emailInput.value = savedEmail;
-
-        // إظهار/إخفاء كلمة المرور
-        if (togglePassword) {
-          togglePassword.addEventListener("click", function () {
-            const type =
-              passwordInput.getAttribute("type") === "password"
-                ? "text"
-                : "password";
-            passwordInput.setAttribute("type", type);
-            this.querySelector("i").classList.toggle("fa-eye");
-            this.querySelector("i").classList.toggle("fa-eye-slash");
-          });
-        }
-
-        form.addEventListener("submit", async function (e) {
-          e.preventDefault();
-
-          const enteredEmail = emailInput.value.trim();
-          const enteredPassword = passwordInput.value;
-
-          if (!enteredEmail || !enteredPassword) {
-            showError("Please fill in all required fields");
-            return;
-          }
-
-          loginButton.disabled = true;
-          loginButton.innerHTML = '<span class="spinner"></span> Logging in...';
-          loginButton.classList.add("btn-loading");
-          hideError();
-
-          try {
-            const registeredEmail = localStorage.getItem("emailToVerify");
-            const registeredPassword =
-              localStorage.getItem("registeredPassword");
-
-            const isAdmin = checkIfAdmin(enteredEmail);
-
-            if (
-              !isAdmin &&
-              (enteredEmail !== registeredEmail ||
-                enteredPassword !== registeredPassword)
-            ) {
-              showError("Invalid email or password. Please try again.");
-              resetButton();
-              return;
-            }
-
-            await new Promise((resolve) => setTimeout(resolve, 1000));
-
-            localStorage.setItem("authToken", "user-authenticated-token");
-            localStorage.setItem("userRole", isAdmin ? "admin" : "user");
-            localStorage.setItem("userEmail", enteredEmail);
-
-            showSuccess(
-              isAdmin
-                ? "Admin login successful! Redirecting..."
-                : "Login successful! Redirecting..."
-            );
-
-            setTimeout(() => {
-              window.location.href = isAdmin ? "index.html" : "job.html";
-            }, 1500);
-          } catch (error) {
-            console.error("Login error:", error);
-            showError(
-              "Unable to process your request. Please try again later."
-            );
-            resetButton();
-          }
-        });
-
-        function checkIfAdmin(email) {
-          const adminEmails = [
-            "ahmed.khaled@gmail.com",
-            "sara.ibrahim@outlook.com",
-            "omar.hassan@gmail.com",
-            "fatima.ahmed@outlook.com",
-            "khaled.salem@gmail.com",
-            "nourhan.mostafa@outlook.com",
-            "youssef.hassan@gmail.com",
-            "mona.abdelrahman@outlook.com",
-            "hassan.zaki@gmail.com",
-            "amira.fathy@outlook.com",
-            "ahmed.mohamed@gmail.com",
-            "ahmdalshayb77@gmail.com",
-          ];
-          return email && adminEmails.includes(email.toLowerCase());
-        }
-
-        function showError(message) {
-          errorBox.textContent = message;
-          errorBox.classList.add("show");
-          errorBox.classList.remove("success-box");
-        }
-
-        function showSuccess(message) {
-          errorBox.textContent = message;
-          errorBox.classList.add("show", "success-box");
-        }
-
-        function hideError() {
-          errorBox.classList.remove("show");
-        }
-
-        function resetButton() {
-          loginButton.disabled = false;
-          loginButton.innerHTML = "Login";
-          loginButton.classList.remove("btn-loading");
-        }
-      });
-    </script>
+   
 
   
 </body>
