--- a/newpass.html
+++ b/newpass.html
@@ -143,7 +143,7 @@
             <div class="activity-card">
                 <div class="activity-logo-wrap">
                     <a href="home.html" class="logo-img pb-0">
-                        <img src="assets/images/logo/logo.svg" alt="شعار">
+                        <img src="./imag/logo.png" alt="شعار">
                     </a>
                 </div>
                 <div class="activity-card-heading">
